# wl-clipboard-rs

./: Cargo.toml
src/: common.rs  copy.rs  handlers.rs  paste.rs  seat_data.rs  utils.rs
src/tests/: copy.rs  paste.rs  utils.rs
wl-clipboard-rs-tools/: Cargo.toml
