[package]
name = "wl-clipboard-rs"
version = "0.7.0" # remember to update html_root_url
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
description = "Access to the Wayland clipboard for terminal and other window-less applications."
edition = "2018"
license = "MIT/Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/wl-clipboard-rs"
repository = "https://github.com/YaLTeR/wl-clipboard-rs"
keywords = ["wayland", "clipboard"]
categories = ["command-line-utilities"]

[workspace]
members = [".", "wl-clipboard-rs-tools"]

[dependencies]
derive-new = "0.5.9"
libc = "0.2.119"
log = "0.4.14"
nix = "0.26.0"
os_pipe = "1.0.1"
tempfile = "3.3.0"
thiserror = "1"
tree_magic_mini = "3.0.3"
wayland-backend = "0.1"
wayland-client = "0.30.0"

[dependencies.wayland-protocols-wlr]
version = "0.1.0"
features = ["client"]

[dev-dependencies]
wayland-server = "0.30.0"

[dev-dependencies.wayland-protocols-wlr]
version = "0.1.0"
features = ["server"]

[features]
# Link to libwayland-client.so instead of using the Rust implementation.
native_lib = [
    "wayland-backend/client_system",
    "wayland-backend/server_system",
]

dlopen = [
    "native_lib",
    "wayland-backend/dlopen",
]
